Revert "Fix nav wrap"
This reverts commit 8fb702c5d8f234f8fdd29018d88473f816da6daf.

--- a/src/css/blocks/nav.scss
+++ b/src/css/blocks/nav.scss
@@ -28,6 +28,7 @@
 
 @media (max-width: 768px) {
     .nav {
+        flex-wrap: wrap;
         justify-content: center;
     }
 }
